--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-firebase/app": "^9.0.0",
     "@react-navigation/drawer": "^5.10.7",
     "@react-navigation/native": "^5.8.7",
     "@react-navigation/stack": "^5.12.4",
