--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-firebase/app": "^9.0.0",
+    "@react-native-firebase/auth": "^9.3.5",
     "@react-navigation/drawer": "^5.10.7",
     "@react-navigation/native": "^5.8.7",
     "@react-navigation/stack": "^5.12.4",
