google firebase linked

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -203,6 +203,9 @@ dependencies {
    implementation 'com.google.android.gms:play-services-base:17.2.1'
    implementation 'com.google.android.gms:play-services-maps:17.0.0'
 
+     implementation 'com.google.firebase:firebase-auth'
+     implementation 'com.google.firebase:firebase-firestore'
+
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
       exclude group:'com.facebook.fbjni'
     }
